	  (thanks Neil Sanchala)
	* Some perl updates (thanks to Sean Egan)
	* IRC got the following slash commands:
	  op, deop, voice, devoice, mode, raw, quote, and kick (thanks
	  to Sean Egan)
	* MSN Properly handles URL decoding of 'friendly' names
	* Redesigned Preferences pages (design by DennisR)
	* Can select where tabs are for tabbed IM/Chat windows

version 0.11.0-pre10 (04/13/2001):
	* Many, many bug fixes
	* Can choose to not send away auto-response (thanks phzzzt)
	* Uh... Oscar works? For now?
	* IRC Plugin can do whois (right click and info)
	* IRC Plugin got away message support
	* Gaim blist to WinAIM blt perl script (courtesy Andy Harrison)
	* Sound on buddy pounce (Thanks Andrew Echols)
	* Can view all group chats in one tabbed window (same keybindings
	  as for tabbed normal conversations)
	* More Protocol plugins:
		Zephyr (plugins/zephyr) (DON'T USE THIS unless you know
			what it is and why you'd want to use it)

version 0.11.0-pre9 (03/26/2001):
	* Can register Jabber accounts (load the Jabber plugin and click
	  Register on the login window)
	* GtkIMHtml handles themes (no background pixmaps though) (thanks
	  decklin, mishan)
	* URLS Linkify properly in Buddy chats
	* Jabber compiles better on Solaris?
	* Gaim works with Oscar Again (Huge thanks to Adam Fritzler of
	  libfaim)

version 0.11.0-pre8 (03/23/2001):
	* Fixed a problem with MSN not detecting signoffs and buddy updates.
	* Implemented away options in MSN
	* Alt-[1-9] to go to [1-9]th pane in tabbed convo window
	* Jabber fixes, Oscar fixes (!), Yahoo fixes, TOC fixes
	* Can use Alt to access menu, and Ctl-char for certain actions
	  (thanks baldnik)
	* Oscar blocking works (?)
	* MSN can see status of other users

version 0.11.0-pre7 (03/16/2001):
	* Can build RPMs as non-root
	* New yahoo library (can use HTTP proxy)
	* Command-line arg to specify config file (thanks Jason Boerner)
	* Can view all conversations in one tabbed window (Control-[ and