@@ -19,6 +19,7 @@ version 0.11.0-pre11:
 	* MSN Properly handles URL decoding of 'friendly' names
 	* Redesigned Preferences pages (design by DennisR)
 	* Can select where tabs are for tabbed IM/Chat windows
+	* Option to queue away messages while away
 
 version 0.11.0-pre10 (04/13/2001):
 	* Many, many bug fixes
